tests/agl/rejections/scope/for_range_bounds_ref_loop_var.agl
for i in 1 to i do
  ()
done
